# 2048game

./: .gitignore  2048-rule.md  2048.cpp  CMakeLists.txt  Control.cpp  Control.h  Draw.cpp  Draw.h  GameData.cpp  GameData.h  GameOperator.cpp  GameOperator.h  OperatorDef.h  README.md  游戏设计框架.md
